--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for Bencher-Scenarios-LogDispatch
 
-0.01    2016-02-17 (PERLANCAR) (unreleased)
+0.01    2016-02-17 (PERLANCAR)
 
         - First release.
